--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -1,5 +1,6 @@
   {{if eq .RunMode "dev"}}
     {{template "debug.html" .}}
   {{end}}
+  <div style="margin-left:30px">(c) ToGo</div>
   </body>
 </html>
