basic session managment, should use an authentication filter for the purpose

--- a/app/views/Task/Index.html
+++ b/app/views/Task/Index.html
@@ -4,6 +4,11 @@
 <header style="background:#99DDFF" class="navbar">
   <div class="navbar-inner">
     <a class="brand" href="#">ToGo App</a>
+
+    <ul class="nav pull-right">
+      <li><a>Hi, <b>{{.user.Name}}</b>&nbsp;&nbsp;</A></li>
+      <li><a href="/Auth/logout">Logout</a></li>
+    </ul>
   </div>
 </header>
 
